syntax = "proto3";

package user;

option go_package = "./";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  int64 id = 1;
}

message Empty {}

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUser(UserId) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserId) returns (Empty);
  rpc ListUsers(Empty) returns (stream User);
}
